hphp/hack/test/typecheck/reactive/rx_if_implements1.php.exp
File "rx_if_implements1.php", line 6, characters 9-22:
The `__OnlyRxIfImpl` attribute cannot be used on a function. (Typing[4231])
